# doi_extraction_standalone

./: .gitignore  README.md  pyproject.toml
doi_pipeline/: __init__.py  doi.py  grobid.py  hardcase_postprocess.py  metadata.py  ocr.py  pipeline.py  review_postprocess.py  validators.py
tests/: test_doi.py  test_hardcase_postprocess.py  test_ocr_metadata.py  test_review_postprocess.py  test_validators.py
tools/: build_manual_review_panel.py  resolve_hard_cases.py  resolve_remaining_143.py  resolve_with_llm_markdown.py  resolve_with_ocr.py
